--- a/untitled/biography.html
+++ b/untitled/biography.html
@@ -34,51 +34,51 @@
     </li>
   </ul>
 
-  <article id="basic-info">
-    <h2>Базова інформація</h2>
+  <article>
+    <h2 id="basic-info">Базова інформація</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad amet blanditiis debitis in iste obcaecati, voluptas. Ad aliquid autem beatae blanditiis commodi consectetur, culpa cum delectus deserunt dolores ea earum enim error esse ex facere facilis harum itaque labore laudantium nam nemo neque non praesentium provident quae reiciendis rem repudiandae sint tempore temporibus tenetur totam, vitae. Beatae blanditiis deserunt facilis labore laboriosam magnam nesciunt officiis qui voluptates? Ab, aperiam deleniti dignissimos dolore eaque eius est et exercitationem facere laboriosam necessitatibus nihil nisi obcaecati perspiciatis quam ratione reiciendis repellat soluta tempora voluptatibus? Assumenda ducimus ea itaque magni quaerat sint sit, voluptas.
     </p>
-    <a href="#content">До змісту</a>
   </article>
+  <a href="#content">До змісту</a>
 
-  <article id="childhood">
-    <h2>Дитинство</h2>
+  <article>
+    <h2 id="childhood">Дитинство</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam assumenda delectus eveniet fuga fugiat ipsa magnam maiores modi omnis pariatur quisquam reiciendis repudiandae sint sunt, totam ut voluptatem. A amet aperiam at commodi delectus deserunt ducimus eius enim eos eveniet excepturi expedita fugit id inventore ipsum iste laborum laudantium maxime minima mollitia nihil non omnis placeat quidem recusandae rem, repudiandae rerum saepe soluta sunt, tempora vero vitae voluptatem. Cupiditate inventore mollitia quibusdam sint. Accusamus adipisci deserunt dolorem doloremque dolorum enim facere ipsa magni, maxime, odit qui, quos soluta! Eaque et harum laborum nisi nostrum officia, suscipit! Aperiam architecto earum eum hic in nesciunt perferendis. Amet atque consectetur consequuntur deserunt error, fuga laboriosam minus molestias nulla quaerat saepe, vitae? Ab.
     </p>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam dolore dolorem eligendi, enim et fugit illum ipsa iure laborum molestiae placeat quasi quia, ratione tempora vel, voluptate? Accusamus adipisci architecto asperiores atque dicta doloremque eius exercitationem explicabo facere harum in inventore iste molestias necessitatibus nemo nesciunt omnis optio provident quas quo, rem repellat reprehenderit saepe tempore totam! Architecto asperiores aut consectetur deserunt dignissimos distinctio doloremque ea eligendi esse eum excepturi illum impedit incidunt inventore iure labore laborum laudantium libero maxime mollitia neque nulla officiis optio pariatur perferendis possimus quae quam quasi quo repudiandae rerum sed, similique sint tempora unde veniam voluptates. A aspernatur corporis eligendi est perspiciatis sed similique.
     </p>
-    <a href="#content">До змісту</a>
   </article>
+  <a href="#content">До змісту</a>
 
-  <article id="school-years">
-    <h2>Шкільні роки</h2>
+  <article>
+    <h2 id="school-years">Шкільні роки</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis cumque exercitationem expedita fuga fugiat illum inventore necessitatibus non placeat praesentium repellat sequi, temporibus velit? Aperiam, beatae consequatur culpa cum cumque deleniti doloremque error expedita hic id laboriosam libero minus, natus, non nostrum odio praesentium quaerat reiciendis reprehenderit saepe sed similique tenetur. Aliquid at labore optio placeat, possimus quidem. Ad culpa porro quidem quisquam. Adipisci aliquam aperiam aspernatur autem consequatur corporis cum, dolorem doloribus dolorum et, facilis ipsum iste, labore libero magnam nesciunt nisi obcaecati praesentium quibusdam quod quos saepe sint voluptatibus! Autem culpa eum ex iusto laborum neque quis sit ullam. Ab aliquam autem, consectetur cumque delectus, eius enim et inventore, ipsa ipsum nemo reprehenderit sed voluptatum? Ab, aliquam blanditiis commodi culpa dicta eum laudantium maiores neque nisi perspiciatis praesentium qui quis recusandae sequi tenetur, voluptates voluptatum! Aliquam, aperiam, officia.
     </p>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet asperiores aspernatur cupiditate dicta dolorem est harum illo laudantium maxime molestiae, mollitia odio provident rem, repellat sit ut vel voluptate? Doloremque fugiat hic quidem recusandae?
     </p>
-    <a href="#content">До змісту</a>
   </article>
+  <a href="#content">До змісту</a>
 
-  <article id="out-of-school">
-    <h2>Поза школою</h2>
+  <article>
+    <h2 id="out-of-school">Поза школою</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis cupiditate dolorem esse ex excepturi id, incidunt, ipsam magnam molestias possimus quis quo quod voluptas. A accusantium adipisci amet autem cumque, debitis dolores doloribus expedita facilis hic ipsam ipsum, iste laborum magni minus mollitia, possimus quasi quisquam quo quos sunt tempore veritatis voluptas. A accusantium atque blanditiis consequatur cupiditate doloremque doloribus dolorum, iste laboriosam minima natus neque nihil numquam officiis omnis praesentium quibusdam quo sint, vel vitae voluptatem voluptates voluptatum? Delectus dolorem in magnam, nemo officia officiis ullam. Culpa ipsum magni suscipit? Asperiores aspernatur aut consequuntur debitis deleniti deserunt dignissimos eaque, earum eveniet iure neque, odio optio perspiciatis quis reprehenderit repudiandae tempora unde! Asperiores aspernatur, autem doloremque in natus necessitatibus ratione.
     </p>
-    <a href="#content">До змісту</a>
   </article>
+  <a href="#content">До змісту</a>
 
-  <article id="university">
-    <h2>Університет</h2>
+  <article>
+    <h2 id="university">Університет</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab adipisci architecto, aspernatur consequuntur deleniti dolor dolore dolorem eveniet, id, illum ipsa laborum maiores modi molestiae nemo odit pariatur quae velit veniam. Distinctio et fugiat impedit in laborum possimus quibusdam rem reprehenderit tempore, ullam ut, veniam, vitae. Alias cupiditate dicta dignissimos eos, laborum mollitia voluptatum. Autem dicta dolores explicabo harum maiores rerum sint. Alias aliquid consequuntur, cumque eos iure molestiae necessitatibus nostrum optio placeat possimus provident quisquam rerum, saepe soluta totam vero voluptatem! Ad delectus expedita illo, ipsam itaque sequi soluta! Accusantium beatae facilis fuga incidunt iusto libero optio repellendus!
     </p>
-    <a href="#content">До змісту</a>
   </article>
+  <a href="#content">До змісту</a>
 
   <hr>
   <p><a href="#header">Уверх</a></p>
