--- a/Lab_2/friends.html
+++ b/Lab_2/friends.html
@@ -19,13 +19,13 @@
 
         th {
             align-items: center;
-            background-color: green;
-            color: yellow;
+            background-color: #ACC8E5;
+            color: #112A46;
             font-weight: bold;
         }
 
-        td:nth-child(odd) {
-            background-color: grey;
+        table tr:nth-child(even) {
+            background-color: lightgrey;
         }
 
         table, th, td {
