--- a/Lab_2/biography.html
+++ b/Lab_2/biography.html
@@ -50,23 +50,23 @@
       }
 
       article:nth-of-type(1) > p{
-        background-color: green;
-        color: yellow;
+        background-color: #ACC8E5;
+        color: #112A46;
       }
 
       article:nth-of-type(2) > p{
         background-color: gold;
-        color: darkmagenta;
+        color: #431B49;
       }
 
       article:nth-of-type(3) > p{
-        background-color: yellowgreen;
-        color: red;
+        background-color: #AEF497;
+        color: #02076B;
       }
 
       article:nth-of-type(4) > p{
-        background-color: hotpink;
-        color: lightcyan;
+        background-color: #FFD0F9;
+        color: #3F1D1D;
       }
 
       article:nth-of-type(5) > p{
