--- a/Lab_2/nowadays.html
+++ b/Lab_2/nowadays.html
@@ -18,8 +18,8 @@
         }
 
         ul:not(li ul) > li:nth-child(odd) {
-            background-color: grey;
-            color: yellowgreen;
+            background-color: lightgrey;
+            color: #30036A;
         }
 
         ol:not(li ol) > li:nth-child(3),
